Added owners listing to owners index page. Closes #16

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -8,5 +8,23 @@
 
 <h1 th:text="'List of Owners'">Owners List</h1>
 
+<table>
+    <thead>
+    <tr>
+       <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}">x</td>
+        <td th:text="${owner.firstName}">x</td>
+        <td th:text="${owner.lastName}">x</td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
