--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -8,5 +8,23 @@
 
 <h1 th:text="'List of Vets'">List of Vets</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">x</td>
+        <td th:text="${vet.firstName}">x</td>
+        <td th:text="${vet.lastName}">x</td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
