--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
 <body>
 
-<h1 th:text="'List of Owners'">Owners List</h1>
+<h2 th:text="'List of Owners'">Owners List</h2>
 
-<table>
+<table class="table table-stripped">
     <thead>
     <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th style="width:150px;">ID</th>
+        <th style="width:150px;">First Name</th>
+        <th style="width:150px;">Last Name</th>
     </tr>
     </thead>
 
